--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-sidebar": "^3.0.2",
     "react-tooltip": "^4.2.21",
     "redux": "^4.2.0",
     "underscore": "^1.13.3",
