--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.5",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "framer-motion": "^6.3.3",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.1.3",
@@ -17,6 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-sidebar": "^3.0.2",
+    "react-toastify": "^9.0.1",
     "react-tooltip": "^4.2.21",
     "redux": "^4.2.0",
     "underscore": "^1.13.3",
